jellyfin-ffmpeg (4.4.1-2) unstable; urgency=medium

  * Fix the OpenCL dynamic linking issue on Win64 (#82)
  * Enable Intel media driver building (#89)

 -- nyanmisaka <nst799610810@gmail.com>  Mon, 21 Feb 2022 13:26:03 +0800

jellyfin-ffmpeg (4.4.1-1) unstable; urgency=medium

  * New upstream release 4.4.1 (#70)
  * Add GH Actions workflow (unused yet) (#66)
  * Add minimum masm version check for x86 dav1d (#72)
  * Add Win64 build script and OpenCL pipeline (#76)
  * Enable link time optimization (#65)
  * Remove OMX and MMAL from ARM builds (#77)
  * Remove Debian Stretch (#80)

 -- Joshua Boniface <joshua@boniface.me>  Mon, 03 Jan 2022 13:07:07 -0500

jellyfin-ffmpeg (4.4-1) unstable; urgency=medium

  * New upstream version 4.4

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 16 Jul 2021 20:17:31 +0800

jellyfin-ffmpeg (4.3.2-1) unstable; urgency=medium

  * New upstream version 4.3.2

 -- Joshua Boniface <joshua@boniface.me>  Fri, 02 Apr 2021 16:27:07 -0400

jellyfin-ffmpeg (4.3.1-4) unstable; urgency=medium

  * Add a custom hwupload_vaapi filter

 -- nyanmisaka <nst799610810@gmail.com>  Sun, 24 Jan 2021 20:01:09 +0800

jellyfin-ffmpeg (4.3.1-3) unstable; urgency=medium

  * Add zscale filter to armhf/arm64 for HDR thumbnails extraction

 -- nyanmisaka <nst799610810@gmail.com>  Wed, 02 Dec 2020 20:52:33 +0800
jellyfin-ffmpeg (4.3.1-2) unstable; urgency=medium

  * Add support for Ubuntu Groovy (20.10)

 -- nyanmisaka <nst799610810@gmail.com>  Sat, 24 Oct 2020 16:24:19 +0800

jellyfin-ffmpeg (4.3.1-1) unstable; urgency=medium

  * New upstream version 4.3.1

 -- nyanmisaka <nst799610810@gmail.com>  Wed, 15 Jul 2020 18:24:21 +0800

jellyfin-ffmpeg (4.2.1-7) unstable; urgency=medium

  * Integrate free libva and intel-vaapi-driver with MIT license in the deb
    package to enable full features of VAAPI transcoding without proprietary
    drivers (see https://github.com/jellyfin/jellyfin-ffmpeg/pull/33).
