@@ -1052,7 +1052,46 @@ Copyright: 2007-2008, Dave Airlie
            2008, Google Inc.
 License: Expat
 
+Files: libva-utils/*
+Copyright: 2007-2019, Intel Corporation
+           2009, Splitted-Desktop Systems
+License: Expat
+
+Files: libva-utils/decode/loadjpeg.c
+       libva-utils/decode/tinyjpeg-internal.h
+       libva-utils/decode/tinyjpeg.c
+       libva-utils/decode/tinyjpeg.h
+Copyright: 2012, Intel Corporation
+           2006, Luc Saillard <luc@saillard.org>
+License: BSD-3-clause
+ Redistribution and use in source and binary forms, with or without
+ modification, are permitted provided that the following conditions are met:
+ .
+ - Redistributions of source code must retain the above copyright notice,
+  this list of conditions and the following disclaimer.
+ .
+ - Redistributions in binary form must reproduce the above copyright notice,
+  this list of conditions and the following disclaimer in the documentation
+  and/or other materials provided with the distribution.
+ .
+ - Neither the name of the author nor the names of its contributors may be
+  used to endorse or promote products derived from this software without
+  specific prior written permission.
+ .
+ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+ LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ POSSIBILITY OF SUCH DAMAGE.
+
 Files: media_driver/media_driver/linux/ult/ult_app/googletest/*
+       libva-utils/test/gtest/*
 Copyright: 2003-2015, Google Inc
 License: BSD-3-clause
  Redistribution and use in source and binary forms, with or without
