@@ -115,6 +115,17 @@ prepare_extra_amd64() {
     popd
     popd
 
+    # Download and install libva-utils
+    pushd ${SOURCE_DIR}
+    git clone --depth=1 https://github.com/intel/libva-utils
+    pushd libva-utils
+    ./autogen.sh
+    ./configure --prefix=${TARGET_DIR}
+    make -j$(nproc) && make install && make install DESTDIR=${SOURCE_DIR}/intel
+    echo "intel${TARGET_DIR}/bin/vainfo usr/lib/jellyfin-ffmpeg" >> ${SOURCE_DIR}/debian/jellyfin-ffmpeg.install
+    popd
+    popd
+
     # Download and install intel-vaapi-driver
     pushd ${SOURCE_DIR}
     git clone --depth=1 https://github.com/intel/intel-vaapi-driver
@@ -158,7 +169,6 @@ prepare_extra_amd64() {
     popd
     popd
 
-    # Uncomment for non-free QSV driver
     # Download and install media-driver
     # Full Feature Build: ENABLE_KERNELS=ON(Default) ENABLE_NONFREE_KERNELS=ON(Default)
     # Free Kernel Build: ENABLE_KERNELS=ON ENABLE_NONFREE_KERNELS=OFF
@@ -180,6 +190,7 @@ prepare_extra_amd64() {
     popd
     popd
 }
+
 # Prepare the cross-toolchain
 prepare_crossbuild_env_armhf() {
     # Prepare the Ubuntu-specific cross-build requirements
